# apgi-framework

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATA_DICTIONARY.md  LICENSE  Makefile  POWER_ANALYSIS.md  README.md  delete_pycache.py  environment.lock.yml  environment.yml  pyproject.toml  reproduce_all.sh  requirements.txt  zenodo.json
.claude/: settings.local.json
.github/workflows/: release.yml  test.yml
binder/: environment.yml
data/: checksums.sha256  generate_seeds.py
figures/: generate_figure1.py  generate_figure2.py  generate_figure3.py  generate_figure4.py  generate_figure5.py  generate_figure6.py  generate_figure7.py  generate_figure8.py  utils.py
figures/paper1/: generate_fig1.py  generate_fig2.py  generate_fig3.py  generate_fig4.py  generate_fig5.py  generate_figS1.py  generate_figS2.py  generate_figS3.py  generate_figS4.py
figures/paper2/: generate_fig1.py  generate_fig2.py  generate_fig3.py  generate_fig4.py  generate_figS1.py
figures/paper3/: generate_fig1.py  generate_fig2.py  generate_fig3.py  generate_fig4.py  generate_fig5.py  generate_figS1.py
figures/paper4/: generate_fig1.py  generate_fig2.py  generate_figS1.py
notebooks/: 01_quick_start.ipynb  02_protocol1_windowing.ipynb  03_protocol2_tms_insular_gating.ipynb  04_protocol3_active_inference.ipynb  05_protocol4_disorders_of_consciousness.ipynb  06_protocol5_fmri_anticipation.ipynb  07_protocol6_ieeg_ignition.ipynb  protocol0_hep_proxy_validation.ipynb  protocol1_cardiac_eeg.ipynb  protocol2_somatic_agent_sim.ipynb  protocol3_anticipation_fmri.ipynb  protocol4_insula_tms.ipynb  protocol4_metabolic_crossover.ipynb  protocol5_ignition_ieeg.ipynb  protocol5_insula_tms.ipynb  protocol6_doc_biomarker.ipynb  protocol6_ignition_ieeg.ipynb  protocol7_doc_biomarker.ipynb  quick_start.ipynb
protocols/: protocol_0_hep_proxy_validation.json  protocol_1_cardiac_eeg.json  protocol_1_cardiac_phase.json  protocol_1_eeg_interoceptive_gating.json  protocol_2_somatic_agent_sim.json  protocol_2_tms_insula.json  protocol_2_tms_insular_gating.json  protocol_3_active_inference_simulations.json  protocol_3_anticipation_fmri.json  protocol_4_disorders_of_consciousness.json  protocol_4_insula_tms.json  protocol_4_metabolic_crossover.json  protocol_5_causal_tms.json  protocol_5_fmri_anticipation.json  protocol_5_ignition_ieeg.json  protocol_6_doc_biomarker.json  protocol_6_icEEG_ignition_dynamics.json  protocol_6_ignition_ieeg.json  protocol_7_doc_biomarker.json
protocols/schemas/: protocol.schema.json
scripts/: APGI_LNN_Bifurcation_Analysis.py  APGI_Somatic_Marker_Identifiability.py  fetch_data.py  validate_protocols.py
src/apgi/: __init__.py  apgi_core.py  clinical.py  core.py  datasets.py  hierarchical.py  integration.py  normalizer.py  parameter_recovery.py  precision.py
src/apgi/extensions/: __init__.py  epistemic.py  hierarchical.py  liquid_network.py
src/apgi/scripts/: __init__.py  fetch_data.py
tests/: conftest.py  test_clinical.py  test_core_equations.py  test_datasets.py  test_epistemic.py  test_fetch_data.py  test_figures_utils.py  test_init.py  test_integration.py  test_lnn_bifurcation.py  test_networks.py  test_normalizer.py  test_parameter_recovery.py  test_precision.py  test_scripts_shim.py  test_somatic_marker_identifiability.py  test_validate_protocols.py
