[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apgi"
version = "0.1.0"
description = "Adaptive Predictive Global Integration (APGI) framework for consciousness research"
authors = [{ name = "APGI Research Team", email = "uxod.com@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "matplotlib>=3.8.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
