[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apgi"
version = "0.2.0"
description = "Adaptive Predictive Global Integration (APGI) framework for consciousness research"
authors = [{ name = "Dimitry Pesochin", email = "uxod.com@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"
readme = "README.md"
keywords = [
    "consciousness",
    "neuroscience",
    "predictive-processing",
    "active-inference",
    "interoception",
    "global-workspace-theory",
    "computational-psychiatry",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "matplotlib>=3.8.4",
    "jsonschema>=4.23.0",
]

[project.urls]
Homepage = "https://github.com/lesoto/apgi-framework"
Repository = "https://github.com/lesoto/apgi-framework.git"
Documentation = "https://github.com/lesoto/apgi-framework#readme"
"Bug Tracker" = "https://github.com/lesoto/apgi-framework/issues"

[project.optional-dependencies]
lnn = ["torch>=2.0"]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "nbval",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "h5py>=3.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
apgi-fetch = "apgi.scripts.fetch_data:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src/apgi --cov=scripts --cov=figures --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "figures/generate_figure*.py", "notebooks/*", "setup.py"]

[tool.coverage.report]
omit = ["tests/*", "figures/generate_figure*.py", "notebooks/*", "setup.py"]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
